--- a/src/feed/Tweetbox.css
+++ b/src/feed/Tweetbox.css
@@ -1,26 +1,63 @@
-.feed__headeroptions{
-    border: 1px solid grey;
-
+.tweetBox{
+    padding-bottom: 10px;
+    border-bottom: 8px solid var(--background);
+    padding-right: 10px;
 }
 
-.feed__headerfirstrow{
+.tweetBox > form {
     display: flex;
-    padding: 10px;
+    flex-direction: column;
+    
 }
 
-.feed__headerfirstrow > input{
+.tweetBox__input {
+    display: flex;
+    padding: 20px;
+}
+
+
+.tweetBox__avatar{
+    margin: 5px;
+}
+
+.tweetBox__avatar:hover{
+    cursor: pointer;
+}
+.tweetBox__input >input{
+   flex: 1;
+   margin-left: 20px;
+   font-size: 20px;
    border: none;
-   width: 100%;
 }
 
-.feed__headerbtn{
+.tweetBox__icons{
+    display: flex;
+    align-items: center;
+    margin-left: 80px;
+
+}
+
+.tweetBox__icons > .MuiSvgIcon-root{
+    color: var(--twitter-color) ;
+    padding: 10px;
+    opacity: 0.7;
+    
+}
+
+.tweetBox__btn{
+    width: 80px !important;
     background-color: var(--twitter-color) !important;
     color: white !important;
-    border: none !important;
-    font-weight: 900 !important;
-    margin-top: 20px !important;
     text-transform: inherit !important;
-    height: 40px !important;
+    font-weight: 900 !important;
+    border: none !important;
     border-radius: 30px !important;
+    margin-left: auto !important;
+   
 
+}
+
+.tweetBox__icons > .MuiSvgIcon-root:hover{
+    cursor: pointer;
+    
 }
